; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_redirect.c_h2o_redirect_register_configurator.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_redirect.c_h2o_redirect_register_configurator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"redirect\00", align 1
@H2O_CONFIGURATOR_FLAG_PATH = common dso_local global i32 0, align 4
@H2O_CONFIGURATOR_FLAG_DEFERRED = common dso_local global i32 0, align 4
@on_config = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_redirect_register_configurator(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @h2o_configurator_create(i32* %4, i32 4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @H2O_CONFIGURATOR_FLAG_PATH, align 4
  %8 = load i32, i32* @H2O_CONFIGURATOR_FLAG_DEFERRED, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @on_config, align 4
  %11 = call i32 @h2o_configurator_define_command(i32* %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %10)
  ret void
}

declare dso_local i32* @h2o_configurator_create(i32*, i32) #1

declare dso_local i32 @h2o_configurator_define_command(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
